fix: 음성 카트 기능 구현 시작, 다국어 설정 추가로 인한 오류 개선
- 음성으로 카트의 내용을 수정할 수 있는 기능 구현 착수
- 다국어 설정으로 인한 추천 메뉴 불러오기 오류를 개선
- 다국어 설정에 대한 필요 구성 파일 추가

--- a/locale/ko/LC_MESSAGES/django.po
+++ b/locale/ko/LC_MESSAGES/django.po
@@ -54,7 +54,7 @@ msgstr "ko-KR"
 
 #: .\orders\templates\orders\menu.html:427
 msgid "output"
-msgstr "en-US"
+msgstr "ko-KR"
 
 #: .\orders\templates\orders\menu.html:428
 msgid "음성입력중"
