feat: 템플릿 UI/UX 수정
- 브랜딩 컨셉에 맞춰 html, css, js 수정

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -67,10 +67,10 @@ msgstr "ea"
 
 #: .\orders\templates\orders\menu.html:441
 msgid "아이템"
-msgstr "Delete All"
+msgstr "Delete"
 
 # "Won" is the currency of South Korea
 #, fuzzy
-#~| msgid "전체삭제"
+#~| msgid "삭제"
 #~ msgid "삭제"
 #~ msgstr "Delete All"
